--- a/docker/alertmanager/config.yml
+++ b/docker/alertmanager/config.yml
@@ -17,7 +17,7 @@ route:
 receivers:
   - name: "email-notifications"
     email_configs:
-      - to: h.naimaei@gmail.com
+      - to: kiarash.sh72@gmail.com
         from: yourmail@gmail.com
         smarthost: smtp.gmail.com:587
         auth_username: yourmail@gmail.com
